Reduce overrides of createIcebergQueryRunner()